updated partner summit to forum

--- a/HTML/session-new.html
+++ b/HTML/session-new.html
@@ -161,7 +161,7 @@
                                     <div class="event-label">Executive Forum</div>
                                     <div class="event-label">Women’s Networking Reception</div>
                                     <div class="event-label">Block Party</div>
-                                    <div class="event-label">Partner Summit</div>
+                                    <div class="event-label">Partner Forum</div>
                                     <div class="event-label">Futures Presentation</div>
                                     <div class="event-label">Datathon</div>
                                 </div>
@@ -176,7 +176,7 @@
                                     <span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s
                                         Networking Reception</span>
                                     <span class="event-title" title="Block Party">Block Party</span>
-                                    <span class="event-title" title="Partner Summit">Partner Summit</span>
+                                    <span class="event-title" title="Partner Forum">Partner Forum</span>
                                     <span class="event-title" title="Futures Presentation">Futures Presentation</span>
                                     <span class="event-title" title="Datathon">Datathon</span>
                                 </div>
@@ -214,7 +214,7 @@
                                     <span class="event-title" title="Sessions &amp; Workshops">Sessions &amp; Workshops</span>
                                     <span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
                                     <span class="event-title" title="Futures Presentation">Futures Presentation</span>
-                                    <span class="event-title" title="Partner Summit">Partner Summit</span>
+                                    <span class="event-title" title="Partner Forum">Partner Forum</span>
                                     <span class="event-title" title="Datathon">Datathon</span>
 
                                     <span class="event-title" title="Education">Education</span>
