--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -46,7 +46,7 @@
 					
 				</div>
 				<div class="cta-home-group">
-					<a class="cta-button large red carat" href="{[E-RSVP YES URL]}">Register now</a>
+					<a class="cta-button large red carat reg-link" href="{[E-RSVP YES URL]}">Register now</a>
 					<a href="https://www.cvent.com/c/abstracts/d4332719-f83e-4369-91ef-eb7249af7822" target="_blank" class="cta-button large blue carat">Call for Speakers</a>
 				</div>
 
@@ -146,7 +146,7 @@
 				<div class="bullet-group">
 					<h5 class="text-uppercase text-bold">Education Event: Hands-On Experience With MicroStrategy 2019</h5>
 					<p>This course is ideal for analysts, business users, developers, data scientists, architects, or administrators seeking a comprehensive overview of the amazing new capabilities in MicroStrategy 2019.</p>
-					<a class="cta-button blue carat" href="{[E-RSVP YES URL]}">Register now</a>
+					<a class="cta-button blue carat reg-link" href="{[E-RSVP YES URL]}">Register now</a>
 				</div>
 			</div>
 		</div>
@@ -264,7 +264,7 @@
 						General Session (speakers to be announced)
 					</div>
 					<div class="time-block">
-						<div class="time-label">5:45pm – 7:15pm</div>
+						<div class="time-label">5:30pm – 7:30pm</div>
 						Welcome Reception and Exhibit Hall Open
 					</div>
 				</div>
@@ -279,12 +279,12 @@
 								Conference Registration
 							</div>
 							<div class="time-block">
-								<div class="time-label">TBD</div>
-								Fun Run
+								<div class="time-label">8:00am – 9:00am</div>
+								Continental Breakfast
 							</div>
 							<div class="time-block">
-								<div class="time-label">8:00am – 9:00am</div>
-								Continental Breakfast and Exhibit Hall Open
+								<div class="time-label">8:00am – 6:00pm</div>
+								Exhibit Hall Open
 							</div>
 							<div class="time-block">
 								<div class="time-label">9:00am – 11:00am</div>
@@ -298,7 +298,7 @@
 						<div class="col lg-6">
 							<div class="time-block">
 								<div class="time-label">12:30pm – 2:00pm</div>
-								Conference Lunch and Exhibit Hall Open
+								Conference Lunch
 							</div>
 							<div class="time-block">
 								<div class="time-label">2:00pm – 5:45pm</div>
@@ -311,6 +311,10 @@
 							<div class="time-block">
 								<div class="time-label">8:00pm – 12:00am</div>
 								Block Party
+							</div>
+							<div class="time-block">
+								<div class="time-label">TBD</div>
+								Fun Run
 							</div>
 						</div>
 					</div>
@@ -331,18 +335,21 @@
 							</div>
 							<div class="time-block">
 								<div class="time-label">8:00am – 9:00am</div>
-								Continental Breakfast and Exhibit Hall Open
+								Continental Breakfast
 							</div>
-							
+							<div class="time-block">
+								<div class="time-label">8:00am – 3:00pm</div>
+								Exhibit Hall Open
+							</div>
+					</div>
+					<div class="col lg-6">
 						<div class="time-block">
 							<div class="time-label">9:00am – 12:45pm</div>
 							Sessions &amp; Workshops
 						</div>
-					</div>
-					<div class="col lg-6">
 						<div class="time-block">
 							<div class="time-label">12:45pm – 2:00pm</div>
-							Conference Lunch and Exhibit Hall Open
+							Conference Lunch
 						</div>
 						<div class="time-block">
 							<div class="time-label">2:00pm – 3:00pm</div>
@@ -454,7 +461,7 @@
 				<span class="type">Fall Special</span>
 				<span class="price"><span class="currency">$</span>1395</span>
 				<span class="date">Until Dec&nbsp;20, 2018</span>
-				<a class="cta-button orange carat" href="{[E-RSVP YES URL]}">Register now</a>
+				<a class="cta-button orange carat reg-link" href="{[E-RSVP YES URL]}">Register now</a>
 			</div>
 		</div>
 		<div class="col md-4">
@@ -828,7 +835,7 @@
 		<div class="row">
 			<img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg" alt="World 2019 white logo" width="0" height="0" />
 		</div>
-		<a class="cta-button large red expand" href="{[E-RSVP YES URL]}">Register now</a>
+		<a class="cta-button large red expand reg-link" href="{[E-RSVP YES URL]}">Register now</a>
 	</div>
 
 	<div class="final-date">
@@ -852,6 +859,7 @@
 </div>
 {[A-CUSTOM TAG:WISTIA-POPOVER]}
 {[A-CUSTOM TAG:SCRIPT-CUSTOM-MAP]}
+{[E-CUSTOM TAG:SCRIPT-REGLINKFIX]}
 
 <style>
 .register-btn-bottom {display:none;}
