--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -54,7 +54,7 @@
 							</div>
 							<div class="col lg-6">
 								<div class="triangle-group red margin-top-10">
-									<p><strong>Wednesday, February 6</strong><br>
+									<p><strong>Thursday, February 7</strong><br>
 									7:30am - 12:00pm <br> 12:30pm - 5:00pm</p>
 								</div>
 							</div>
@@ -88,7 +88,7 @@
 							</div>
 							<div class="col lg-6">
 								<div class="triangle-group red margin-top-10">
-									<p><strong>Wednesday, February 6</strong><br>
+									<p><strong>Thursday, February 7</strong><br>
 										7:30am - 12:00pm <br> 12:30pm - 5:00pm</p>
 								</div>
 							</div>
@@ -242,6 +242,7 @@
 
 </div>
 
+{[E-CUSTOM TAG:SCRIPT-REGLINKFIX]}
 
 <style>
 	.register-btn-bottom {display:none;}
