--- a/HTML/concierge.html
+++ b/HTML/concierge.html
@@ -52,7 +52,7 @@
         </section>
 
     </div>
-
+    {[E-CUSTOM TAG:SCRIPT-REGLINKFIX]}
     <style>
         .card {
             height: 200px;
