--- a/HTML/older page versions/Agenda_builder-version.html
+++ b/HTML/older page versions/Agenda_builder-version.html
@@ -237,6 +237,7 @@
 {[E-CUSTOM TAG:AGENDA-BUILDER-SCRIPT-1]}
 {[E-CUSTOM TAG:AGENDA-BUILDER-SCRIPT-2]}
 {[E-CUSTOM TAG:AGENDA-BUILDER-SCRIPT-3]}
+{[E-CUSTOM TAG:SCRIPT-REGLINKFIX]}
 <style>
 	.register-btn-bottom {display:none;}
 	div.bottom {padding:0;}
