--- a/HTML/partner-day.html
+++ b/HTML/partner-day.html
@@ -102,6 +102,7 @@
         </section> 
 </div>
 
+{[E-CUSTOM TAG:SCRIPT-REGLINKFIX]}
 <style>
  .register-btn-bottom {display:none;}
 div.bottom {padding:0;}
