--- a/HTML/session-new.html
+++ b/HTML/session-new.html
@@ -270,7 +270,8 @@
 
     <!-- {[E-CUSTOM TAG:AGENDA-BUILDER-SCRIPT-1]}
     {[E-CUSTOM TAG:AGENDA-BUILDER-SCRIPT-2]}
-    {[E-CUSTOM TAG:AGENDA-BUILDER-SCRIPT-3]} -->
+    {[E-CUSTOM TAG:AGENDA-BUILDER-SCRIPT-3]} 
+    {[E-CUSTOM TAG:SCRIPT-REGLINKFIX]} -->
     <script type="text/javascript" src="../scripts/agenda-builder.js"></script>
     <style>
 	    .register-btn-bottom {
