--- a/HTML/sponsors.html
+++ b/HTML/sponsors.html
@@ -343,6 +343,8 @@
     </section>
 </div>
 
+{[E-CUSTOM TAG:SCRIPT-REGLINKFIX]}
+
 <style>
     .register-btn-bottom { display: none; }
     div.bottom {padding:0;}
