updated confirmation page styles and updated class names for reglink fix

--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -60,7 +60,7 @@
 							</div>
 						</div>
 
-						<a class="cta-button small red carat margin-top-10" target="_blank" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a>
+						<a class="cta-button small red carat margin-top-10 reg-link" target="_blank" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a>
 					</div>
 			</div>
 
@@ -93,7 +93,7 @@
 								</div>
 							</div>
 						</div>
-						<a class="cta-button small red carat margin-top-10" target="_blank" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a>
+						<a class="cta-button small red carat margin-top-10 reg-link" target="_blank" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a>
 				</div>
 			</div>
 		</div>
@@ -219,7 +219,7 @@
 			<div class="row">
 				<img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg" alt="World 2019 white logo" width="0" height="0" />
 			</div>
-			<a class="cta-button large red expand" href="{[E-RSVP YES URL]}">Register now</a>
+			<a class="cta-button large red expand reg-link" href="{[E-RSVP YES URL]}">Register now</a>
 		</div>
 
 		<div class="final-date">
