--- a/HTML/partner-day.html
+++ b/HTML/partner-day.html
@@ -80,7 +80,7 @@
                 <div class="row">
                     <img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg" alt="World 2019 white logo" width="0" height="0" />
                 </div>
-                <a class="cta-button large red expand" href="{[E-RSVP YES URL]}">Register now</a>
+                <a class="cta-button large red expand reg-link" href="{[E-RSVP YES URL]}">Register now</a>
             </div>
         
             <div class="final-date">
