updated content on page and images

--- a/HTML/Venue.html
+++ b/HTML/Venue.html
@@ -1,130 +1,197 @@
-<div id='venue'>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Venue</title>
+	<link rel="stylesheet" href="../CSS/main.min.css">
+</head>
+<body>
+	<div id='venue-page'>
 
-	<section id="hero-banner" class="background-orange section-stacked-bars">
-		<div class="row h-left">
-			<div class="col lg-9">
-				<div class="bullet-group large z-2">
-					<h1 class="text-large">Venue & Accommodations</h1>
-					<p class="h3">This year MicroStrategy World will be hosted at The Phoenix Convention Center.</p>
+		<section id="hero-banner" class="background-orange section-stacked-bars">
+			<div class="row h-left">
+				<div class="col lg-9">
+					<div class="bullet-group large z-1">
+						<h1 class="text-large">Venue, Travel, & Accommodations</h1>
+						<p class="h3">This year MicroStrategy World will be hosted at The Phoenix Convention Center.</p>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="pattern-overlay z-0">
-			<img alt="pattern background of stacked bars" class="static-pattern pos-top" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/32013585cba040f990a80882f956d983.png" width="847" heigh="515"/>
-		</div>
-	</section>
-
-	<div class="pattern-between row expand collapse">
-		<div class="col release background-pattern pattern-split-circles pattern-small height-small">&nbsp;</div>
-		<div class="col release background-pattern pattern-square-dots pattern-small height-small">&nbsp;</div>
-		<div class="col release background-pattern pattern-sparse-triangles pattern-small height-small">&nbsp;</div>
-		<div class="col release background-pattern pattern-vertical-bars pattern-small height-small">&nbsp;</div>
-		<div class="col release background-pattern pattern-tartan pattern-small height-small">&nbsp;</div>
-	</div>
-
-	<section id="photo-mosaic" class="photo-mosaic no-padding">
-		<div class="row expand collapse photo-row large">
-			<div class="col md-6">
-				<div class="photo venue-main"></div>
+			<div class="pattern-overlay z-0">
+				<img alt="pattern background of stacked bars" class="static-pattern pos-top" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/32013585cba040f990a80882f956d983.png" width="847" heigh="515"/>
 			</div>
-			<div class="col md-6">
-				<div class="photo accomm-main"></div>
-			</div>
+		</section>
+
+		<div class="pattern-between row expand collapse">
+			<div class="col release background-pattern pattern-split-circles pattern-small height-small">&nbsp;</div>
+			<div class="col release background-pattern pattern-square-dots pattern-small height-small">&nbsp;</div>
+			<div class="col release background-pattern pattern-sparse-triangles pattern-small height-small">&nbsp;</div>
+			<div class="col release background-pattern pattern-vertical-bars pattern-small height-small">&nbsp;</div>
+			<div class="col release background-pattern pattern-tartan pattern-small height-small">&nbsp;</div>
 		</div>
-	</section>
 
-
-	<section class="background-orange no-padding section-stacked-bars">
-		<div class="row h-left">
-			<div class="col md-6">
-				<div class="bullet-group">
-					<h3 class="text-uppercase text-normal marginup5">Venue</h3>
+		<section id="venue" class="section-stacked-bars">
+			<div class="row photo-row large">
+				
+				<div class="col md-6 expand collapse">
+					<div class="photo venue-main"></div>
+				</div>
+				
+				<div class="col md-6">
 					<p class="h3">Phoenix Convention Center</p>
 					<p>The Phoenix Convention Center is located in the heart of downtown Phoenix and just 4 miles from Sky Harbor International Airport. The center is within walking distance of major convention hotels, shopping, entertainment, sports, theater venues and has its own dedicated stop on the Metro Light Rail line.</p>
-				</div>
-			</div>
-			<div class="col md-6">
-				<div class="bullet-group">
-					<h3 class="text-uppercase text-normal marginup5">Accommodations</h3>
-					<p class="h3">Hyatt Regency Phoenix</p>
-					<P>Located across the street from the Phoenix Convention Center, Hyatt Regency Phoenix places downtown Phoenix at your feet.</P>
-					<p><strong>Discounted room blocks for World 2019 attendees are available. </strong> To reserve a room, book online or call the Hyatt Regency Phoenix hotel at <a href="tel:602-252-1234" class="text-red text-bold">602.252.1234</a> and let them know you are a MicroStrategy World attendee. Rooms at the preferred rate are available and are based upon availability.</p>
-					<a class="cta-button red carat large" href="https://aws.passkey.com/go/SMIRO8" target="_blank">Book your room online</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="background-navy no-padding section-stacked-bars">
 
-		<div class="row margin-top-30 padding-30">
-			<div class="col md-6">
-				<div class="line tiny blue thick"></div>
-				<h3 class="text-uppercase text-normal text-small">Venue and travel</h3>
-				<p>The Phoenix Convention Center is four miles from <a class="text-white" href="https://www.skyharbor.com/">Sky Harbor International Airport</a>. Guests flying into Phoenix have multiple transportation options, including the Metro Light Rail, which has dedicated stops at the Convention Center.</p>
-				<p><strong>Sky Harbor International Airport</strong></p>
-				<p>2485 E Buckeye Rd,<br> Phoenix, AZ 85034</p>
+					<h3 class="text-uppercase text-normal text-small">Air Travel</h3>
+					<p>The Phoenix Convention Center is four miles from <a class="text-white" href="https://www.skyharbor.com/">Sky Harbor International Airport</a>. Guests flying into Phoenix have multiple transportation options, including the Metro Light Rail, which has dedicated stops at the Convention Center.</p>
+					<p><strong>Sky Harbor International Airport</strong></p>
+					<p>2485 E Buckeye Rd,<br> Phoenix, AZ 85034</p>
+				</div>
 			</div>
-			<div class="col md-6">
-				<div class="line tiny blue thick"></div>
-				<h3 class="text-uppercase text-normal text-small">Hotel details & Amenities</h3>
-				<div class="row">
-					<div class="col lg-6">
-						<p><strong>Hyatt Regency Phoenix</strong></p>
-						<p>122 North Second Street <br> Phoenix, Arizona, 85004</p>
-						<p>Phone: <a href="tel:602-252-1234" class="text-white">602.252.1234</a></p>
-						<p>Fax: <a href="tel:602-254-9472" class="text-white">602.254.9472</a></p>
-						<p>Website: <a href="https://www.hyatt.com/en-US/hotel/arizona/hyatt-regency-phoenix/phxrp" class="text-white" target="_blank">Hyatt Regency Phoenix</a></p>
+		</section>
+		<section id="accommodations-photos" class="section-stacked-bars background-orange no-padding-top">
+				<div class="row photo-row large expand collapse">
+					<div class="col md-6 expand collapse">
+						<div class="photo venue-second"></div>
 					</div>
-					<div class="col lg-6">
+					<div class="col md-6 expand collapse">
+						<div class="photo venue-third"></div>
+					</div>
+				</div>
+			<div class="row h-left">
+				<div class="col md-6">
+					<div class="bullet-group">
+						<h3 class="text-uppercase text-normal marginup5">Sheraton Grand Phoenix</h3>
+						<p>340 North 3rd Street <br> Phoenix, Arizona, 85004</p>
+						<p>Phone: <a href="tel:602-262-2500" class="text-white">602.262.2500</a></p>
+						<p>Website: <a href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1544552427242&key=GRP&app=resvlink" class="text-white" target="_blank">Sheraton Grand Phoenix</a></p>
+						<p><strong>Room rate $259</strong></p>
+						<p>The city's largest hotel, Sheraton Grand Phoenix is a contemporary haven in a prime location. Unpack and unwind in stylish rooms and suites, featuring modern essentials, gorgeous city views and a thoughtful collection of signature amenities.</p>
+						<p>Explore a compelling collection of vibrant attractions, including Talking Stick Resort Arena, Arizona State University, CityScape, the Encanto Historic District, Chase Field and Heard Museum. Discover flexible event space for corporate meetings, magical weddings and unforgettable social affairs, all within steps of the Phoenix Convention Center. After a day of business or fun, refresh in our sparkling pool, sip cocktails in our stylish lounge or sit down to delectable local fare at our inviting District American Kitchen & Wine Bar.</p>
+						<p>Just 10 minutes from Sky Harbor International Airport, near endless entertainment options, our hotel is a welcoming sanctuary in the heart of Phoenix.</p>
+						<div class="line tiny blue thick"></div>
+						<h3 class="text-uppercase text-normal text-small">Hotel details & Amenities</h3>
 						<ul class="triangle-list orange">
-							<li>Rooftop pool and hot tub with sun deck</li>
-							<li>24-hour StayFit™ gym</li>
-							<li>Pool/fitness centerr</li>
-							<li>Three dining outlets, including the revolving Compass Lounge and Restaurant</li>
+							<li>Business Center</li>
+							<li>On-site Restaurant</li>
+							<li>Pool/fitness center</li>
+							<li>Pet Friendly</li>
 						</ul>
+						<a class="cta-button navy carat large" href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1544552427242&key=GRP&app=resvlink" target="_blank">Book your room online</a>
+					</div>
+				</div>
+				<div class="col md-6">
+					<div class="bullet-group">
+						<h3 class="text-uppercase text-normal marginup5">Renaissance Phoenix Downtown Hotel</h3>
+						<p>100 North 1st Street <br> Phoenix, Arizona, 85004</p>
+						<p>Phone: <a href="tel:602-333-0000" class="text-white">602.333.0000</a></p>
+						<p>Website: <a href="https://book.passkey.com/go/MicroStrategyWorld2019" class="text-white" target="_blank">Renaissance Phoenix Downtown Hotel</a></p>
+						<p><strong>Room rate $269</strong></p>
+						<p>Immerse yourself into the vibrant culture of Phoenix by staying at Renaissance Phoenix Downtown Hotel. After experiencing the unique style of our newly reimagined lobby, unwind in your perfectly appointed accommodations, which seamlessly blend modern sophistication with second-home comfort. Upgrade to a hotel suite for optimal space or a Club Level room for exclusive Club Lounge access. Keep your workout routine in our modern fitness center, or relax in our heated rooftop pool. Before a day exploring downtown Phoenix or business, start your day with a coffee beverage from our on-site Starbucks® or a tempting breakfast from Marston's Cafe.</p>
+						<p> For a taste of the Southwest, visit Dust Cutter, our hotel's signature restaurant. Hold your next meeting or special event with us. Our hotel boasts over 51,000 square feet of flexible event space. Along with our proximity to the Phoenix Convention Center, attendees will appreciate our hotel's ideal downtown location near Chase Field, Talking Stick Resort Arena and more.</p>
+						<div class="line tiny blue thick"></div>
+						<h3 class="text-uppercase text-normal text-small">Hotel details & Amenities</h3>
+						<ul class="triangle-list orange">
+							<li>Room Service</li>
+							<li>Salon/Sauna</li>
+							<li>Pool/fitness center</li>
+							<li>Business Center</li>
+						</ul>
+						<a class="cta-button navy carat large" href="https://book.passkey.com/go/MicroStrategyWorld2019" target="_blank">Book your room online</a>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-	<section id="photo-mosaic" class="photo-mosaic no-padding">
-		<div class="row expand collapse photo-row short">
-			<div class="col">
-				<div class="photo phoenix-city-landscape"></div>
-			</div>
-		</div>
-		
-	</section>
+		</section>
 
-	<section id="call-to-action">
-		<div class="final-cta">
+		<section class="photo-mosaic no-padding">
+			<div class="row expand collapse photo-row tall">
+					<div class="col md-6">
+					<div class="photo grand-canyon height-jumbo">&nbsp;</div>
+				</div>
+				<div class="col md-3">
+						<div class="col release photo sedona half">&nbsp;</div>
+						<div class="col release photo antelope-canyon half">&nbsp;</div>
+				</div>
+				<div class="col md-3">
+						<div class="col release photo tombstone half">&nbsp;</div>
+						<div class="col release photo phoenix-city half">&nbsp;</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="background-navy section-stacked-bars">
+			<!-- <div class="row h-left">
+				<div class="bullet-group">
+					<h3 class="text-uppercase text-normal marginup5">Things to Check Out</h3>
+				</div>
+			</div> -->
 			<div class="row">
-				<img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg"
-					alt="World 2019 white logo" width="0" height="0">
+				<div class="col md-6">
+					<h3>Grand Canyon</h3>
+					<p>Take in unforgettable views of classic southwestern landscapes. Explore the Grand Canyon South Rim in this incredible tour from Phoenix that covers the deepest and widest parts of the Grand Canyon.</p> 
+				</div>
+				<div class="col md-6">
+					<h3>Sedona</h3>
+					<p>Tour the magical red rocks of Sedona and visit Native American ruins during this Sedona Red Rocks Tour from Phoenix.</p> 
+				</div>
 			</div>
-			<a class="cta-button large red expand reg-link" href="{[E-RSVP YES URL]}">Register now</a>
-		</div>
+			<div class="row">
+				<div class="col md-4">
+					<h3>Antelope Canyon</h3>
+					<p>Tour Antelope Canyon in the only day-tour available from the Phoenix area! Experience one of the most picturesque slot canyons before taking in the breathtaking views of Horseshoe Bend.</p>
+				</div>
+				<div class="col md-4">
+					<h3>Tombstone</h3>
+					<p>On this guided day tour of Tombstone, Arizona, explore the “Town Too Tough To Die” and its classic western history like the OK Corral.</p>
+				</div>
+				<div class="col md-4">
+					<h3>City</h3>
+					<p>Explore one of the most diverse cities in the nation. See downtown Phoenix, the time-honored Arizona capitol building, Old Town Scottsdale and the historic Biltmore architecture as we tour the Valley of the Sun.</p>
+				</div>
+			</div>
+		</section>
 
-		<div class="final-date">
-			<div class="icon-lockup text-white">
-				<img alt="date icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e1bbbb629eb34c34b6462bbb28612345.png"
-					width="32" height="32">
-				<p>
-					<strong class="text-uppercase text-bold text-white">February</strong>
-					4th – 6th 2019
-				</p>
+		<section class="no-padding">
+
+			<div class="row expand collapse photo-row short">
+			
+				<div class="col">
+					<div class="photo phoenix-city-landscape"></div>
+				</div>
+			
 			</div>
-			<div class="icon-lockup text-white">
-				<img alt="location icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0a1ac4e6db4c4a61834db54ffeebff71.png"
-					width="32" height="32">
-				<p>
-					<strong class="text-uppercase text-bold text-white">Phoenix, Arizona</strong>
-					Phoenix Convention Center
-				</p>
+		</section>
+
+		<section id="call-to-action">
+			<div class="final-cta">
+				<div class="row">
+					<img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg"
+						alt="World 2019 white logo" width="0" height="0">
+				</div>
+				<a class="cta-button large red expand reg-link" href="{[E-RSVP YES URL]}">Register now</a>
 			</div>
-		</div>
-	</section>
-</div>
+
+			<div class="final-date">
+				<div class="icon-lockup text-white">
+					<img alt="date icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e1bbbb629eb34c34b6462bbb28612345.png"
+						width="32" height="32">
+					<p>
+						<strong class="text-uppercase text-bold text-white">February</strong>
+						4th – 6th 2019
+					</p>
+				</div>
+				<div class="icon-lockup text-white">
+					<img alt="location icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0a1ac4e6db4c4a61834db54ffeebff71.png"
+						width="32" height="32">
+					<p>
+						<strong class="text-uppercase text-bold text-white">Phoenix, Arizona</strong>
+						Phoenix Convention Center
+					</p>
+				</div>
+			</div>
+		</section>
+	</div>
 
 {[E-CUSTOM TAG:SCRIPT-REGLINKFIX]}
 
@@ -145,3 +212,5 @@
 		padding-bottom: 0px;
 	}
 </style>
+</body>
+</html>		
