updated new sponsor

--- a/HTML/sponsors.html
+++ b/HTML/sponsors.html
@@ -95,7 +95,7 @@
             </div>
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">Data Meaning</h6>
-                <p><em>Company description coming soon!</em></p>
+                <p>Data Meaning is a boutique BI consultancy and MicroStrategy Systems Integration Partner that leverages data and technology to overcome business challenges. We deliver end-to-end solutions for our clients and lead the industry in design, customization, and training. Data Meaning specializes in coming up with unique solutions to your biggest problems; everything from the creation of a new data warehouse to developing innovative mobile applications.</p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
@@ -119,7 +119,7 @@
             </div>
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">Exasol</h6>
-                <p><em>Company description coming soon!</em></p>
+                <p>We know how important data is to you. That’s why as your requirements and ideas evolve, you’ll always be able to rely on our powerful and superfast data warehouse to help push the limits of data analytics anywhere, anytime – whether that’s in the cloud, on premise or for the next platform down the line. <strong>Exasol – the future of data analytics</strong></p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
@@ -205,7 +205,7 @@
             </div>
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">Gensquared</h6>
-                <p><em>Company description coming soon!</em></p>
+                <p> Gensquared is a data company with one goal: to help organizations of all sizes get actionable intelligence and real results from their data, all within a reasonable budget. Not long ago, only companies with big budgets and big technology teams could use data science to compete, but Gensquared has changed that – we Bring Data to Life for everyone.</p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
@@ -255,7 +255,7 @@
             </div>
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">Mighty Wizards</h6>
-                <p>Mighty Wizards is an experienced nearshore consulting company based in Mexico City. We have a talented team with more than 25 years of experience in the US offering services such as: ETL, Data Guild, SDK and Mobile Design, among others. We offer top notch end-to-end solutions for our customers.</p>
+                <p>Mighty Wizards is an experienced nearshore consulting company based in Mexico City. We have a talented team with more than 25 years of experience in the US offering services such as: ETL, Data Guild, SDK and Mobile Design, among others. We offer top notch end-to-end solutions for our customers.”</p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
@@ -267,8 +267,8 @@
                 </a>
             </div>
             <div class="col md-7 lg-6">
-                <h6 class="text-uppercase text-bold">Obase</h6>
-                <p>Based in Chicago, OBASE is a software, consulting and R&D company and solution-integrator, experienced in ‘Analytical Solutions’ and ‘Scientific Retail Solutions’. 20+ years of experience as a strategic Microstrategy Partner in global, OBASE is the vertical end-to-end solution provider for Retail, Telco and Airlines Industries.</p>
+                <h6 class="text-uppercase text-bold">OBASE</h6>
+                <p>Based in Washington DC and Istanbul, OBASE has made MicroStrategy implementations and built long term business relations with more than 60 companies from Retail, Telco, Airlines, Finance, Government, CPG, Pharma, Transportation and Utilities. OBASE also provides “Pre-Packaged Business Intelligence” and “Scientific Retail” solutions built on MicroStrategy for Retail, Telco and Airlines Industries as one of the oldest MicroStrategy partner over 20+ years.</p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
@@ -298,6 +298,18 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
+                <a href="https://www.visualcrossing.com/" target="_blank" class="ratio sixteen-nine">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/2a902a05db6d4a7f9c6fd4c867ae9fd0.png" alt="Visual Crossing logo">
+                </a>
+            </div>
+            <div class="col md-7 lg-6">
+                <h6 class="text-uppercase text-bold">Visual Crossing</h6>
+                <p><em>Company description coming soon!</em></p>
+            </div>
+            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
+        </div>
+        <div class="row h-left">
+            <div class="col lg-3 md-4">
                 <a href="https://www.vitara.co/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/bf1d03ca62d94ab39bb183c0695b9ba4.png" alt="Vitara logo">
                 </a>
@@ -316,7 +328,7 @@
             </div>
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">Yellowbrick</h6>
-                <p><em>Company description coming soon!</em></p>
+                <p>Yellowbrick Data empowers companies to make faster decisions with all of their data. Built for enterprises and the hybrid cloud, the Yellowbrick Data Warehouse deploys powerful analytics anywhere, with best in-class economics. Find out what you can achieve today at <a href="www.yellowbrick.com">yellowbrick</a>.</p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
